--- a/tasks/templates/partials/navbar.html
+++ b/tasks/templates/partials/navbar.html
@@ -1,29 +1,31 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">To Do</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">To Do</a>
   <button
     class="navbar-toggler"
     type="button"
     data-toggle="collapse"
-    data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent"
+    data-target="#navbarText"
+    aria-controls="navbarText"
     aria-expanded="false"
     aria-label="Toggle navigation"
   >
     <span class="navbar-toggler-icon"></span>
   </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav">
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
       {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="/">Tarefas</a>
-      </li>
+        <a class="nav-link" href="/"
+          >Tarefas <span class="sr-only">(current)</span></a
+        >
       </li>
       {% else %}
       <li class="nav-item">
-        <a class="nav-link" href="/accounts/login">Entrar</a>
+        <a class="nav-link" href="/accounts/login"
+          >Entrar <span class="sr-only">(current)</span></a
+        >
       </li>
       {% endif %}
       <li class="nav-item">
@@ -35,5 +37,6 @@
       </li>
       {% endif %}
     </ul>
+    <span class="navbar-text"> Simplify your tasks! </span>
   </div>
 </nav>
