--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -24,8 +24,16 @@
     <div class="container-fluid">
       {% include 'partials/navbar.html' %} {% block content %} {% endblock %}
 
-      <footer>
-        <p>Grupo 12 ToDo</p>
+      <footer
+        class="text-center text-white fixed-bottom size"
+        style="background-color: rgb(52, 58, 64)"
+      >
+        <div class="text-center p-3" style="background-color: rgb(52, 58, 64)">
+          © 2022 Copyright:
+          <a class="text-white" href="https://github.com/RafaelLeone/todolist"
+            >To Do list</a
+          >
+        </div>
       </footer>
     </div>
     <script
