--- a/tasks/templates/partials/navbar.html
+++ b/tasks/templates/partials/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">To Do</a>
+  <a class="navbar-brand" href="/">To Do list</a>
   <button
     class="navbar-toggler"
     type="button"
