--- a/tasks/templates/about.html
+++ b/tasks/templates/about.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %} {% block content %}
-<div class="container-fluid">
+<div class="container-fluid text-light">
   <div class="row">
     <div class="col-md-12">
       <br />
-      <h1 class="text-info text-center">Sobre nós</h1>
+      <h1 class="text-white text-center">Sobre nós</h1>
       <p class="lead text-center">
         Somos um grupo de 3 estudantes de tecnologia, participantes do programa
         de formação de devs Busertech. Essa página foi desenvolvida utilizando o
