--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,9 +4,18 @@
 {% block title %}Entrar{% endblock %}
 
 {% block content %}
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <div class="row">
     <div class="col-md-4 offset-md-4">
-        <div class="card  auth-card">
+        <div class="card auth-card bg-dark text-light">
             <div class="card-body">
                 <h4 class="card-title text-center">Entrar no To Do List</h4>
         
