--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -20,7 +20,7 @@
     />
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
   </head>
-  <body>
+  <body class="bg-secondary">
     <div class="container-fluid">
       {% include 'partials/navbar.html' %} {% block content %} {% endblock %}
 
